Skip to content

VLC 3.0.0 support of A_OPUS/EXPERIMENTAL (in Matroska)

VLC 3.0.0 on Windows 10 Pro x64.

Also tested with latest 4.0.0 (nightly).

Audio streams using the legacy codec ID A_OPUS/EXPERIMENTAL in Matroske files (mkv or mka) do not work anymore: codec is stated as undefined/unidentified by VLC.

Same file works in VLC 2.2.8.

File remuxed with a recent enough version of mkvtoolnix (>= 6.4.0, which uses A_OPUS codec ID) works in VLC 3.0.0.

If dropping the support of the legacy codec ID is intentional, maybe th FAQ should be updated (with the workaround: remux with the 'A_OPUS' codec ID).

If not, then this is a bug to fix for next versions of VLC.

How to reproduce:

  1. Get an Opus sample file (e.g. https://people.xiph.org/~giles/2012/opus/detodos.opus)
  2. Mux it with mkvtoolnix 6.3.0 at most, e.g. downloaded from here: https://mkvtoolnix.download/windows/releases/6.3.0/
  3. Try to play the generated mka file
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information