demux: mkv: support OPUS/EXPERIMENTAL codec ID

Fixes #19660

(cherry picked from commit 5d0056dc3e2bc11bebf7dfa0ddefaa32f34cefd2)
Signed-off-by: Tristan Matthews <tmatth@videolan.org>